WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183977
Fix the !ENABLE(MEDIA_STREAM) build
https://bugs.webkit.org/show_bug.cgi?id=183977
Summary
Fix the !ENABLE(MEDIA_STREAM) build
Tim Horton
Reported
2018-03-24 01:36:18 PDT
Fix the !ENABLE(MEDIA_STREAM) build
Attachments
Patch
(5.51 KB, patch)
2018-03-24 01:39 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-03-24 01:39:05 PDT
Created
attachment 336466
[details]
Patch
Wenson Hsieh
Comment 2
2018-03-24 01:44:06 PDT
Comment on
attachment 336466
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336466&action=review
r=me
> Source/WebKit/UIProcess/Cocoa/UIDelegate.mm:895 > #endif
Could be worth adding some UNUSED_PARAM()s as needed for debug builds.
Tim Horton
Comment 3
2018-03-24 02:29:39 PDT
Comment on
attachment 336466
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336466&action=review
>> Source/WebKit/UIProcess/Cocoa/UIDelegate.mm:895 >> #endif > > Could be worth adding some UNUSED_PARAM()s as needed for debug builds.
Don’t think we need them in WK2.
WebKit Commit Bot
Comment 4
2018-03-24 02:55:40 PDT
Comment on
attachment 336466
[details]
Patch Clearing flags on attachment: 336466 Committed
r229950
: <
https://trac.webkit.org/changeset/229950
>
WebKit Commit Bot
Comment 5
2018-03-24 02:55:41 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-03-24 02:56:16 PDT
<
rdar://problem/38823362
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug