Fix the !ENABLE(MEDIA_STREAM) build https://bugs.webkit.org/show_bug.cgi?id=183977

Reviewed by Wenson Hsieh.

* UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::UIClient::decidePolicyForUserMediaPermissionRequest):
* UIProcess/Cocoa/UserMediaCaptureManagerProxy.messages.in:
* UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
* WebProcess/cocoa/UserMediaCaptureManager.messages.in:


Canonical link: https://commits.webkit.org/199582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229950 268f45cc-cd09-0410-ab3c-d52691b4dbfc